Fix alignment and add uncertainty class to tables

--- a/styles/components/_tables.scss
+++ b/styles/components/_tables.scss
@@ -9,6 +9,10 @@ p.toChecked {
   margin: 1rem 0;
 }
 
+.uncertainty {
+  font-size: 0.7rem;
+}
+
 table {
 
   tbody {
@@ -277,3 +281,4 @@ table {
     }
   }
 }
+
